--- a/index.html
+++ b/index.html
@@ -1,32 +1,172 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>IIS7</title>
-<style type="text/css">
-<!--
-body {
-	color:#000000;
-	background-color:#B3B3B3;
-	margin:0;
-}
-
-#container {
-	margin-left:auto;
-	margin-right:auto;
-	text-align:center;
-	}
-
-a img {
-	border:none;
-}
-
--->
-</style>
+<!DOCTYPE html>
+<!-- saved from url=(0042)https://equityadaptiveframework.dpdns.org/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>Equity Adaptive Framework (EAF)</title>
+    <link rel="stylesheet" href="./Equity Adaptive Framework (EAF)_files/style.css">
 </head>
 <body>
-<div id="container">
-<a href="http://go.microsoft.com/fwlink/?linkid=66138&amp;clcid=0x409"><img src="welcome.png" alt="IIS7" width="571" height="411" /></a>
-</div>
-</body>
-</html>
+    <header>
+        <div class="container">
+            <h1>Equity Adaptive Framework (EAF)</h1>
+            <nav>
+                <ul>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/index.html">Home</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/legal.html">Legal</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/consumer.html">Consumer</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/corporate.html">Corporate</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/social.html">Social</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/digital.html">Digital</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <h2>Introduction</h2>
+            <p>The <strong>Equity Adaptive Framework (EAF)</strong> is a holistic, human-centered system for evaluating actions, policies, and decisions across legal, corporate, digital, consumer, regulatory, and social domains. Its purpose is to correct systemic failures where fairness is compromised, enforcement is inconsistent, good actors are penalized while malicious actors evade scrutiny, and harm is created or ignored through negligence, ignorance, or bad faith.
+</p>
+            <p>EAF ensures that no individual, institution, or system benefits at the expense of others. It provides a structured method for ethical evaluation, remaining ideology-agnostic, politically neutral, and free from dogma or narrative influence. Principles are timeless and robust, yet their application is contextually adaptive, avoiding rigid, one-size-fits-all enforcement.</p>
+<br>
+            <h2>Core Principles</h2>
+            <ul>
+                <li><strong>Intent:</strong> – Evaluate the underlying purpose, awareness, and good-faith effort behind actions.</li>
+<br>
+                <li><strong>Harm:</strong> Assess actual, potential, direct, and systemic harm, including harm caused by inaction or negligence.</li>
+<br>
+                <li><strong>Proportionality:</strong> Ensure outcomes, penalties,
+or remedies align with severity, context, intent, and real-world 
+impact.</li>
+<br>
+                <li><strong>Accountability &amp; Shared Responsibility:</strong> All actors are fairly evaluated; responsibility cannot be displaced.
+</li>
+<br>
+		<li><strong> Equity over Technicality / Non-Zero-Sum Evaluation:</strong> – Fairness and human-centered reasoning take precedence over strict procedural compliance. </li>
+<br>
+		<li><strong> Consistency & Bias Correction:</strong> – Detect and correct arbitrary, inconsistent, or biased enforcement.
+<br>
+            </ul>
+
+<p> <strong> Note: </strong> Principles are fixed in intent, but application is adaptive, ensuring ethical outcomes while remaining robust against misuse.</p>
+<br>
+            <h2>Fail-Safes & Systemic Effectiveness</h2>
+            <p>EAF explicitly accounts for <strong> willful negligence, ignorance, or bad-faith behavior </strong>. Such actions trigger fail-safes, exposing malicious actors while reinforcing transparency and accountability.
+</p>
+<p> Because EAF relies on <strong> reason, proportionality, and observable harm </strong>, baseless opposition or selective resistance <strong> collapses under scrutiny </strong>, protecting good actors and ensuring that ethical evaluation prevails even when engagement is uneven.</p>
+<br>
+
+
+            <h2>Applications Across Domains</h2>
+            <ul>
+                <li><strong>ID / Consumer Interaction </strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> Lawful customers are repeatedly ID-checked while others are not. </li>
+<li><strong> Analysis </strong> Selective enforcement indicates bias and inequity.</li>
+<li><strong> Response: </strong> Document incidents, assert rights calmly, escalate to management or regulators.</li>
+</ul>
+</li>
+<br>
+<li><strong>Legal / Tenancy</strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> Tenants penalized inconsistently for minor infractions. </li>
+<li><strong> Analysis </strong> Unequal treatment creates disproportionate harm.</li>
+<li><strong> Response: </strong> Appeal to oversight boards, advocate for proportional enforcement.
+</li>
+</ul>
+</li>
+<br>
+<li><strong> Corporate / Workplace </strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> Employees overlooked due to managerial bias.
+ </li>
+<li><strong> Analysis </strong> Meritocracy is undermined; ethical responsibility compromised.
+</li>
+<li><strong> Response: </strong> : Document patterns, recommend equitable promotion policies.
+</li>
+</ul>
+</li>
+<br>
+<li><strong>Regulatory / Public Enforcement</strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> Enforcement is uneven across communities. </li>
+<li><strong> Analysis </strong>  Bias and inconsistency create systemic inequity.</li>
+<li><strong> Response: </strong> Collect evidence, escalate, advocate for bias-reduction and policy adjustment.
+</li>
+</ul>
+</li><br>
+<li><strong>Consumer Rights – Digital Goods & Mandatory Compensation:</strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> DRM-restricted games sold as ownership; pay-to-win mechanisms create inequity; exploiters avoid penalties.
+</li>
+<li><strong> Analysis: </strong> Bad-faith practices harm consumers; penalties are disproportionate.
+</li>
+<li><strong> Response: </strong> Nullify bad-faith transactions, recognize legitimate use, make compensation mandatory, reform systems to ensure fair access and enforcement.</li>
+</ul>
+</li><br>
+
+<li><strong>Criminal Law – Wealth Disparity, Arbitrary Crimes & Disproportionate Impact:</strong> .</li>
+               	<ul>
+			<li><strong> Scenario: </strong> Wealthy actors exploit loopholes; low-income actors punished for similar or arbitrary acts, even in good faith.
+
+</li>
+<li><strong> Analysis: </strong>Harm and consequences are uneven; intent differs, but outcomes are inequitable.
+. </li>
+<li><strong> Response: </strong> Equitable enforcement, proportional punishment, mandatory restitution, close loopholes, and recognize good faith in evaluation.
+</li>
+</ul>
+</li>
+<br>
+<li><strong> Contextual Evaluation of Harm</strong> .</li>
+               	<ul>
+			<li> <strong>Example: “Whites Only Laundry” vs. “Whites Only Pool”</strong></li>
+<br>
+<ul>
+<li><strong>Intent:</strong> Functional vs. discriminatory actions</li>
+<li> <strong>Perception vs. Reality: </strong>Misinterpretation should not punish innocent actors </li>
+<li> <strong>Proportionality: </strong>Response matches actual harm, not perceived offense
+</li>	
+<li> <strong>Shared Accountability:</strong> All actors fairly assessed </li>
+<li> <strong>Non-Zero-Sum Principle: </strong>Prevent benefits for some by harming others </li>
+<li><strong>Correcting Bias & Contradictions: </strong>Address inconsistent enforcement
+</li>
+<li><strong> Malicious Actors: </strong>Identify and prevent harmful actors from going unnoticed
+</li>
+
+</ul>
+</ul>
+</li>
+            </ul>
+
+            <h2>Key Outcomes</h2>
+<strong>
+            <ul>
+                <li>Protection of good-faith actors</li>
+                <li>Exposure of malicious or negligent actors</li>
+                <li>Elimination of zero-sum exploitation</li>
+                <li>Proportional correction and restitution for harm
+</li>
+                
+<li>Restoration of trust through consistency and transparency</li>
+<li>Continuous improvement and adaptive application without compromising principles</li>
+
+            </ul>
+</strong>
+            <h2>Conclusion</h2>
+            <p>The Equity Adaptive Framework is <strong> timeless, adaptable, and resilient. </strong> Its principles provide a logically sound and ethically grounded foundation for evaluating human action across domains. By combining immutable ethical guidance with flexible application, EAF ensures fairness, protects good actors, exposes malfeasance, and corrects systemic inequities.
+</p>
+            <p>EAF is not a rigid law, nor a political tool; it is a <strong> principled, humanity-centered system </strong> designed to guide ethical evaluation, reform flawed systems, and promote trust in all spheres of society. Its adoption represents both a <strong>practical roadmap for ethical decision-making and a declaration that fairness, proportionality, and accountability can be codified, taught, and applied consistently.</strong>
+</p>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>© 2025 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
+        </div>
+</footer>
+
+
+
+
+</body></html>
