--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Equity Adaptive Framework (EAF)</title>
-    <link rel="stylesheet" href="./Equity Adaptive Framework (EAF)_files/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
