--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ impact.</li>
 
     <footer>
         <div class="container">
+			<p>Read EAF as the author intended! switch to our Author's Cut <a href="equityadapativeframework.dpdns.org/expert"> here</a> </p>
             <p>© 2025 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
         </div>
 </footer>
