--- a/expert.html
+++ b/expert.html
@@ -7,7 +7,7 @@
 <body>
 <header>
 <div class="container">
-<h1>Equity Adaptive Framework (EAF)</h1>
+<h1>Equity Adaptive Framework (EAF) - Author's Cut</h1>
 <nav>
 <ul>
 <li><a href="https://equityadaptiveframework.dpdns.org/index.html">Home</a></li>
