--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ impact.</li>
 
     <footer>
         <div class="container">
-			<p> Want to cut through the nonsense? Switch to our Author's Cut <a href="equityadaptiveframework.dpdns.org/expert.html"> here!</a> </p>
+			<p> Want to cut through the nonsense? Switch to our Author's Cut <a href="expert.html"> here!</a> </p>
             <p>© 2025 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
         </div>
 </footer>
