--- a/editions.html
+++ b/editions.html
@@ -25,7 +25,7 @@
 <div class="container">
 <h2>Editions</h2>
 <ul> 
-  <li><a href="https://equityadaptiveframework.dpdns.org/index.html">Standard Edition</a></li></li>
+  <li><a href="https://equityadaptiveframework.dpdns.org/index.html">Standard Edition</a></li>
   <li><<a href="https://equityadaptiveframework.dpdns.org/expert.html">Author's Cut</a></li>
   <li><<a href="https://equityadaptiveframework.dpdns.org/first-edition.html">First Edition (Original)</a></li>
 </ul>
