--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ impact.</li>
 
     <footer>
         <div class="container">
-			<p> Contact Us:<a href="eaf@outlook.co.nz">eaf@outlook.co.nz</a>
+			<p> Contact Us:  <a href="mailto:eaf@outlook.co.nz">eaf@outlook.co.nz</a>
             <p>© 2025 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
         </div>
 </footer>
