--- a/donations.html
+++ b/donations.html
@@ -104,6 +104,7 @@
         <p>
             Donations are currently received via our 
             <a href="https://givealittle.co.nz/cause/support-a-fairer-proportionate-approach-to-ethics"> GiveALittle Page</a>
+            and <a href="https://ko-fi.com/equityadaptiveframework"> Ko-Fi Page</a>
         </p>
 
         <br>
