--- a/donations.html
+++ b/donations.html
@@ -105,6 +105,8 @@
             Donations are currently received via our 
             <a href="https://givealittle.co.nz/cause/support-a-fairer-proportionate-approach-to-ethics"> GiveALittle Page</a>
             and <a href="https://ko-fi.com/equityadaptiveframework"> Ko-Fi Page</a>
+
+            <iframe id='kofiframe' src='https://ko-fi.com/equityadaptiveframework/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='equityadaptiveframework'></iframe>
         </p>
 
         <br>
@@ -123,6 +125,15 @@
 
 <footer>
     <div class="container">
+        <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('equityadaptiveframework', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
         <p>Contact Us: <a href="mailto:eaf@outlook.co.nz">eaf@outlook.co.nz</a></p>
         <p>© 2026 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
     </div>
