--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@ impact.</li>
 
     <footer>
         <div class="container">
+			<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('equityadaptiveframework', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support Us',
+    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 			<p> Contact Us:  <a href="mailto:eaf@outlook.co.nz">eaf@outlook.co.nz</a>
 			<p> Make EAF a reality! <a href="donations.html"> Donate Today! </a>
             <p>© 2026 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
