--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
     </ul>
     <p><strong>EAF Principle Alignment:</strong> Intent, Harm Prevention, Proportionality, Accountability, Equity, Bias Correction</p>
     <p><strong>Status & Impact:</strong> Concept completed, stakeholder consultations ongoing, pilot planning underway</p>
-    <p><a href="pdfs/AccessHousing_Manifesto.pdf" target="_blank">Download Access Housing Manifesto (PDF)</a></p>
+    <p><a href="accesshousing.dpdns.org" target="_blank">Download Access Housing Manifesto (PDF)</a></p>
   </section>
 
   <!-- Auckland 550 -->
