--- a/donations.html
+++ b/donations.html
@@ -59,7 +59,7 @@
             <li>
                 <strong>Foundational Infrastructure</strong>
                 <ul>
-                    <li>Secure a permanent, independently owned domain </li> <em> (i.e dropping the "dpdns.org" part for a cleaner ".org") </em>
+                    <li>Secure a permanent, independently owned domain </li> <em>(e.g., transitioning to a clean .org extension for improved stability, professionalism, and long-term citation reliability) </em>
                     <li>Cover essential hosting and documentation costs</li>
                     <li>Ensure long-term accessibility and citation stability</li>
                 </ul>
