--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0042)https://equityadaptiveframework.dpdns.org/ -->
-<html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0", http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Equity Adaptive Framework (EAF)</title>
     <link rel="stylesheet" href="style.css">
