--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ impact.</li>
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
-			<p> Introducing <a  href="https://accesshousing.dpdpns.org"> Access Housing, a new praticial EAF application! </a>  </p>
+			<p> Introducing <a href="https://accesshousing.dpdns.org",  target="_blank", rel="moopener noreferrer"> Access Housing, a new praticial EAF application! </a>  </p>
 			<p> Contact Us:  <a href="mailto:eaf@outlook.co.nz">eaf@outlook.co.nz</a>
 			<p> Make EAF a reality! <a href="donations.html"> Donate Today! </a>
             <p>© 2026 Equity Adaptive Framework (EAF) | All Rights Reserved</p>
