--- a/donations.html
+++ b/donations.html
@@ -102,9 +102,9 @@
         <br>        
         <h2> How To Donate?</h2>
         <p>
-            Donations are currently received via our 
-            <a href="https://ko-fi.com/equityadaptiveframework" target="_blank" rel="noopener noreferrer"> Ko-Fi Page <strong>(Prefered)</strong></a> and 
-            <a href="https://givealittle.co.nz/cause/support-a-fairer-proportionate-approach-to-ethics"target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer"> GiveALittle Page</a>
+            Donations are currently received via 
+            <a href="https://ko-fi.com/equityadaptiveframework" target="_blank" rel="noopener noreferrer"> Ko-Fi <strong>(Preferred)</strong></a> and 
+            <a href="https://givealittle.co.nz/cause/support-a-fairer-proportionate-approach-to-ethics"target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer"> GiveALittle </a>
         
 </p>
     <p><strong>We recommend as it charges 0% commission, ensuring the full value of your contribution supports EAF. </strong></p>
