--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="https://equityadaptiveframework.dpdns.org/case-library.html"> Case Library</a></li>
 					<li><a href="https://equityadaptiveframework.dpdns.org/editions.html">Past Versions</a></li>
 					<li><a href="donations.html">Donations</a></li>
+					<li><a href="https://linktr.ee/equityadaptiveframework">Our Socials</a></li>
                 </ul>
             </nav>
         </div>
