--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@ impact.</li>
 <p> Because EAF relies on <strong> reason, proportionality, and observable harm </strong>, baseless opposition or selective resistance <strong> collapses under scrutiny </strong>, protecting good actors and ensuring that ethical evaluation prevails even when engagement is uneven.</p>
 <br>
 <h2>Inductive Integrity & Fail-Closed Application</h2>
-<p> All applications of EAF must preserve its <strong> core principles as a base condition. </strong> Adaptive interpretation is valid only where inductive generalisation maintains <strong>full compliance with the immutable core. </strong> Any breach <strong>invalidates </strong> the evaluation in full.</p>
-
+<p> All applications of EAF must preserve its <strong> core principles as a base condition. </strong> Adaptive interpretation is valid only where inductive generalisation maintains <strong>full compliance with the immutable core principles. </strong> Any breach <strong>invalidates </strong> the evaluation <strong>in full. </strong></p>
+<p><em>Failure to perform or document inductive evaluation constitutes non-compliance.</em></p>
+<br>
             <h2>Applications Across Domains</h2>
             <ul>
                 <li><strong>ID / Consumer Interaction </strong> .</li>
