--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="canonical" href="https://equityadaptiveframework.dpdns.org/projects">
 <title>EAF Projects | Equity Adaptive Framework</title>
 <link rel="stylesheet" href="style.css">
 </head>
