--- a/donations.html
+++ b/donations.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8", name="viewport" content="width=device-width, initial-scale=1.0" , http-equiv="Content-Type">
+    <link rel="canonical" href="https://equityadaptiveframework.dpdns.org/donations">
     <title>Donations | Equity Adaptive Framework (EAF)</title>
     <link rel="stylesheet" href="./style.css">
 </head>
