--- a/author's-note.html
+++ b/author's-note.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Donations | Equity Adaptive Framework (EAF)</title>
+    <link rel="canonical" href="https://equityadaptiveframework.dpdns.org/author's-note">
+    <title>Author's Note | Equity Adaptive Framework (EAF)</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
