--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0042)https://equityadaptiveframework.dpdns.org/ -->
 <html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0", http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
     <link rel="canonical" href="https://equityadaptiveframework.dpdns.org/">
 	 <link rel="icon" type="image/png" href="/favicon-32x32.png">
     <title>Equity Adaptive Framework (EAF)</title>
