--- a/donations.html
+++ b/donations.html
@@ -13,16 +13,16 @@
     <div class="container">
         <h1>Equity Adaptive Framework (EAF)</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="legal.html">Legal</a></li>
-                <li><a href="consumer.html">Consumer</a></li>
-                <li><a href="corporate.html">Corporate</a></li>
-                <li><a href="social.html">Social</a></li>
-                <li><a href="digital.html">Digital</a></li>
-                <li><a href="editions.html">Editions</a></li>
-                <li><a href="donations.html">Donations</a></li>
-            </ul>
+    <ul>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/index.html">Home</a></li>
+				    <li><a href="https://equityadaptiveframework.dpdns.org/author's-note.html"> About EAF</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/legal.html">Domains</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/projects.html">Applications</a></li>
+                    <li><a href="https://equityadaptiveframework.dpdns.org/case-library.html"> Case Library</a></li>
+					<li><a href="https://equityadaptiveframework.dpdns.org/editions.html">Past Versions</a></li>
+					<li><a href="https://equityadaptiveframework.dpdns.org/donations.html">Donations</a></li>
+					<li><a href="https://linktr.ee/equityadaptiveframework">Our Socials</a></li>
+                </ul>
         </nav>
     </div>
 </header>
