--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@ impact.</li>
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
+			<script>
+document.querySelector('.close').addEventListener('click', function() {
+  document.querySelector('.mirror-banner').style.display = 'none';
+});
+</script>
 			<p> Introducing <a href="https://accesshousing.dpdns.org",  target="_blank", rel="moopener noreferrer"> Access Housing, a new praticial EAF application! </a>  </p>
 			<p> Contact Us:  <a href="mailto:eaf@outlook.co.nz">eaf@outlook.co.nz</a>
 			<p> Make EAF a reality! <a href="donations.html"> Donate Today! </a>
