--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 <div class="mirror-banner">
 	<span class="close">&times;</span>
   <div class="mirror-banner-inner">
-    <Strong> Stand with EAF! Our Hosting Reality </Strong>
+    <Strong> Stand with EAF! Our Hosting Reality </Strong> <br>
 
-Preferred primary (neutral infrastructure, no corporate branding): equityadaptiveframework.dpdns.org  
-Practical bootstrap mirror (forced by systemic barriers): equityadaptiveframework.github.io
-
+Preferred primary (neutral infrastructure, no corporate branding): <a href="https://equityadaptiveframework.dpdns.org"> equityadaptiveframework.dpdns.org</a> <br>
+Practical bootstrap mirror (forced by systemic barriers):<a href="https://equityadaptiveframework.github.io"> equityadpativeframework.github.io</a> <br>
 <strong>Free subdomains (*.dpdns.org and similar) are subjected to disproportionate delays, silent email drops, and indexing suppression based on reputation heuristics — while identical good-faith content on established platforms is favoured without question.  
 This is not a neutral outcome. It is observable, avoidable harm caused by inaction and refusal to apply proportional, context-aware correction.  
 EAF demands better: shared responsibility, meaningful engagement, and adaptive reform to stop penalising good actors while protecting bad ones through negligence.</strong>
