--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Practical bootstrap mirror (forced by systemic barriers): <a href="https://equit
 <br>
 Free subdomains (*.dpdns.org and similar) are subjected to disproportionate delays, silent email drops, and indexing suppression based on reputation heuristics — while identical good-faith content on established platforms is favoured without question. <br>
 <br>  
-<strong> This is not a neutral outcome.</strong> 
+<strong> This is not a neutral outcome.</strong> <br>
 It is observable, avoidable harm caused by inaction and refusal to apply proportional, context-aware correction.  
 <strong>EAF demands better: </strong>shared responsibility, meaningful engagement, and adaptive reform to stop penalising good actors while protecting bad ones through negligence.
   </div>
