--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 Preferred primary (neutral without corporate branding): <a href="https://equityadaptiveframework.dpdns.org">equityadaptiveframework.dpdns.org</a> <br>
 Practical bootstrap mirror (forced by systemic barriers): <a href="https://equityadaptiveframework.github.io">equityadpativeframework.github.io</a> <br>
 <br>
-Free subdomains (*.dpdns.org and similar) are subjected to disproportionate delays, silent email drops, and indexing suppression based on reputation heuristics, while identical good-faith content on established platforms is favoured without question. <br>
-<span class="key-statement"><strong> This is not a neutral outcome.</strong> </span>  
-It is observable, avoidable harm caused by inaction and refusal to apply proportional, context-aware correction.  <br>
-<span class="demand-line"><strong>EAF demands better: </strong>shared responsibility, meaningful engagement, and adaptive reform &mdash; to stop penalising good actors while protecting bad ones through negligence. </span>
-  </div>
+Independent subdomains often face automated trust penalties, while identical content on established platforms receives default credibility.<span class="key-statement"><strong> This is not a neutral outcome.</strong> </span>  
+ <br>
+<span class="key-statement"> To ensure long-term stability and neutrality, EAF is working toward securing a dedicated custom domain.</span> </div>
+	<span class="demand-line"> Help make that possible</span>
+	<span class="demand-line"> <strong> <a href="donations.html">Support EAF Now </a> </strong> 
 </div>
 	 <link rel="icon" type="image/png" href="/favicon-32x32.png">
     <title>Equity Adaptive Framework (EAF)</title>
