--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <div class="mirror-banner">
 	<span class="close">&times;</span>
   <div class="mirror-banner-inner">
-    <Strong> Stand with EAF! Our Hosting Reality: </Strong> 
+    <Strong> Stand with EAF! </Strong> 
 <br>
 Primary Source: <a href="https://equityadaptiveframework.dpdns.org">equityadaptiveframework.dpdns.org</a> <br>
 Practical Mirror: <a href="https://equityadaptiveframework.github.io">equityadpativeframework.github.io</a> <br>
 <br>
-Independent subdomains often face automated trust penalties, while identical content on established platforms receives default credibility.<br>  
+Independent subdomains often face automated reputation filtering, while identical content on established platforms receives default credibility.<br>  
 <span class="key-statement"> To ensure long-term stability and neutrality, EAF is working toward securing a dedicated custom domain.</span> </div>
-	<span class="demand-line"> Help make that possible</span>
-	<span class="demand-line"> <strong> <a href="donations.html">Support EAF Now </a> </strong> 
+	<span class="demand-line"> Help EAF secure an indepedant domain </span>
+	<span class="demand-line"> <strong> <a href="donations.html">Support EAF </a> </strong> 
 </div>
 	 <link rel="icon" type="image/png" href="/favicon-32x32.png">
     <title>Equity Adaptive Framework (EAF)</title>
