--- a/donations.html
+++ b/donations.html
@@ -58,12 +58,13 @@
 
         <ul>
             <li>
-                <strong>Foundational Infrastructure</strong>
+                <strong>Foundational Infrastructure </strong>
                 <ul>
+					<em>$16.74 NZD/year for domain + hosting stability</em>
                     <li>Secure a permanent, independently owned domain </li> <em>(e.g., transitioning to a clean .org extension for improved stability, professionalism, and long-term citation reliability) </em>
                     <li>Cover essential hosting and documentation costs</li>
                     <li>Ensure long-term accessibility and citation stability</li>
-                </ul>
+				</ul>
             </li>
 
             <br>
