--- a/donations.html
+++ b/donations.html
@@ -60,7 +60,7 @@
             <li>
                 <strong>Foundational Infrastructure </strong>
                 <ul>
-					<em>$16.74 NZD/year for domain + hosting stability</em>
+					<em>$10.13 USD ($16.74 NZD as of 12 Feb 2026 at 1.65) year for domain + hosting stability</em>
                     <li>Secure a permanent, independently owned domain </li> <em>(e.g., transitioning to a clean .org extension for improved stability, professionalism, and long-term citation reliability) </em>
                     <li>Cover essential hosting and documentation costs</li>
                     <li>Ensure long-term accessibility and citation stability</li>
