--- a/donations.html
+++ b/donations.html
@@ -64,7 +64,7 @@
                     <li>Secure a permanent, independently owned domain </li> <em>(e.g., transitioning to a clean .org extension for improved stability, professionalism, and long-term citation reliability) </em>
                     <li>Cover essential hosting and documentation costs</li>
                     <li>Ensure long-term accessibility and citation stability</li>
-					<img src="Screenshot_20260212_135604_Chrome.jpg">
+					<img src="Screenshot_20260212_135604_Chrome.jpg" width="300" alt="Screenshot"
 				</ul>
             </li>
 
